Library/AXL(Library)/Dynamic Link/DAXC.h

typedef DWORD    PASCAL EXPORT funcAxcInfoIsCNTModule(DWORD *upStatus);
typedef DWORD    PASCAL EXPORT funcAxcInfoGetModuleNo(long lBoardNo, long lModulePos, long *lpModuleNo);
typedef DWORD    PASCAL EXPORT funcAxcInfoGetModuleCount(long *lpModuleCount);
typedef DWORD    PASCAL EXPORT funcAxcInfoGetChannelCount(long lModuleNo, long *lpCount);
typedef DWORD    PASCAL EXPORT funcAxcInfoGetTotalChannelCount(long *lpChannelCount);
   
typedef DWORD    PASCAL EXPORT funcAxcInfoGetModule(long lModuleNo, long *lpBoardNo, long *lpModulePos, DWORD *upModuleID);
typedef DWORD    PASCAL EXPORT funcAxcInfoGetModuleEx(long lModuleNo, DWORD *upModuleSubID, char* szModuleName, char* szModuleDescription);
typedef DWORD    PASCAL EXPORT funcAxcInfoGetModuleStatus(long lModuleNo);
typedef DWORD    PASCAL EXPORT funcAxcInfoGetFirstChannelNoOfModuleNo(long lModuleNo, long *lpChannelNo);
typedef DWORD    PASCAL EXPORT funcAxcSignalSetEncInputMethod(long lChannelNo, DWORD dwMethod);
typedef DWORD    PASCAL EXPORT funcAxcSignalGetEncInputMethod(long lChannelNo, DWORD* dwpUpMethod);
typedef DWORD    PASCAL EXPORT funcAxcSignalSetCaptureFunction(long lChannelNo, DWORD dwCapturePol);
typedef DWORD    PASCAL EXPORT funcAxcSignalGetCaptureFunction(long lChannelNo, DWORD* dwpCapturePol);
typedef DWORD    PASCAL EXPORT funcAxcTriggerSetNotchEnable(long lChannelNo, DWORD dwUsage);
          
typedef DWORD    PASCAL EXPORT funcAxcTriggerGetNotchEnable(long lChannelNo, DWORD* dwpUsage);
                
typedef DWORD    PASCAL EXPORT funcAxcSignalGetCapturePos(long lChannelNo, double* dbpCapturePos);
typedef DWORD    PASCAL EXPORT funcAxcSignalSetEncReverse(long lChannelNo, DWORD dwReverse);
typedef DWORD    PASCAL EXPORT funcAxcSignalGetEncReverse(long lChannelNo, DWORD* dwpReverse);
typedef DWORD    PASCAL EXPORT funcAxcSignalSetEncSource(long lChannelNo, DWORD dwSource);
typedef DWORD    PASCAL EXPORT funcAxcSignalGetEncSource(long lChannelNo, DWORD* dwpSource);
typedef DWORD    PASCAL EXPORT funcAxcStatusGetActPos(long lChannelNo, double* dbpActPos);
typedef DWORD    PASCAL EXPORT funcAxcStatusSetActPos(long lChannelNo, double dbActPos);
typedef DWORD    PASCAL EXPORT funcAxcStatusGetChannel(long lChannelNo, DWORD* dwpChannelStatus);
typedef DWORD    PASCAL EXPORT funcAxcMotSetMoveUnitPerPulse(long lChannelNo, double dMoveUnitPerPulse);
typedef DWORD    PASCAL EXPORT funcAxcMotGetMoveUnitPerPulse(long lChannelNo, double* dpMoveUnitPerPuls);
typedef DWORD    PASCAL EXPORT funcAxcTriggerSetFunction(long lChannelNo, DWORD dwMode);
typedef DWORD    PASCAL EXPORT funcAxcTriggerGetFunction(long lChannelNo, DWORD* dwpMode);
typedef DWORD    PASCAL EXPORT funcAxcTriggerSetNotchPos(long lChannelNo, double dbLowerPos, double dbUpperPos);
typedef DWORD    PASCAL EXPORT funcAxcTriggerGetNotchPos(long lChannelNo, double* dbpLowerPos, double* dbpUpperPos);
typedef DWORD    PASCAL EXPORT funcAxcTriggerSetOutput(long lChannelNo, DWORD dwOutVal);
typedef DWORD    PASCAL EXPORT funcAxcTriggerSetNotchPos(long lChannelNo, double dbLowerPos, double dbUpperPos);
typedef DWORD    PASCAL EXPORT funcAxcTriggerGetNotchPos(long lChannelNo, double* dbpLowerPos, double* dbpUpperPos);
typedef DWORD    PASCAL EXPORT funcAxcTriggerSetFreq(long lChannelNo, DWORD dwFreqency);
extern funcAxcInfoIsCNTModule                           *AxcInfoIsCNTModule;
extern funcAxcInfoGetModuleNo                           *AxcInfoGetModuleNo;
extern funcAxcInfoGetModuleCount                        *AxcInfoGetModuleCount;
extern funcAxcInfoGetChannelCount                       *AxcInfoGetChannelCount;
extern funcAxcInfoGetModule                             *AxcInfoGetModule;
extern funcAxcInfoGetModuleEx                           *AxcInfoGetModuleEx;
extern funcAxcInfoGetModuleStatus                       *AxcInfoGetModuleStatus;
extern funcAxcInfoGetTotalChannelCount                  *AxcInfoGetTotalChannelCount;
extern funcAxcInfoGetFirstChannelNoOfModuleNo           *AxcInfoGetFirstChannelNoOfModuleNo;
extern funcAxcSignalSetEncInputMethod                   *AxcSignalSetEncInputMethod;
extern funcAxcSignalGetEncInputMethod                   *AxcSignalGetEncInputMethod;
extern funcAxcSignalSetCaptureFunction                  *AxcSignalSetCaptureFunction;
extern funcAxcSignalGetCaptureFunction                  *AxcSignalGetCaptureFunction;
extern funcAxcTriggerSetNotchEnable                     *AxcTriggerSetNotchEnable;
extern funcAxcTriggerGetNotchEnable                     *AxcTriggerGetNotchEnable;
extern funcAxcSignalGetCapturePos                       *AxcSignalGetCapturePos;
extern funcAxcSignalSetEncReverse                       *AxcSignalSetEncReverse;
extern funcAxcSignalGetEncReverse                       *AxcSignalGetEncReverse;
extern funcAxcSignalSetEncSource                        *AxcSignalSetEncSource;
extern funcAxcSignalGetEncSource                        *AxcSignalGetEncSource;
extern funcAxcMotSetMoveUnitPerPulse                    *AxcMotSetMoveUnitPerPulse;
extern funcAxcMotGetMoveUnitPerPulse                    *AxcMotGetMoveUnitPerPulse;
extern funcAxcStatusGetActPos                           *AxcStatusGetActPos;
extern funcAxcStatusSetActPos                           *AxcStatusSetActPos;
extern funcAxcStatusGetChannel                          *AxcStatusGetChannel;
extern funcAxcTriggerSetFunction                        *AxcTriggerSetFunction;
extern funcAxcTriggerGetFunction                        *AxcTriggerGetFunction;
extern funcAxcTriggerSetNotchPos                        *AxcTriggerSetNotchPos;
extern funcAxcTriggerGetNotchPos                        *AxcTriggerGetNotchPos;
extern funcAxcTriggerSetOutput                          *AxcTriggerSetOutput;
extern funcAxcTriggerSetNotchPos                        *AxcTriggerSetNotchPos;
extern funcAxcTriggerGetNotchPos                        *AxcTriggerGetNotchPos;
extern funcAxcTriggerSetFreq                            *AxcTriggerSetFreq;